--- a/style/style.css
+++ b/style/style.css
@@ -1,43 +1,62 @@
+/*blackish rgb(38, 38, 38)*/
+/*blood-orange rgba(230, 48, 0, 0.74)*/
+/*white cream rgba(245, 243, 239, 0.8)*/
 body {
-  background: rgb(3, 9, 27);
+  font-family: "Lucida Console", Monaco, monospace;
 }
-.chatMessenger {
+.background{
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background-image: url('./images/background.jpg');
+  /*background: rgb(164, 52, 27);*/
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+}
+.chatMessengerBtn {
     position: absolute;
     bottom: 25px;
     right: 25px;
  }
-.chatMessenger button{
- background-color: rgba(18, 22, 131, 0.61);
+.chatMessengerBtn button{
+ background-color: rgba(230, 48, 0, 0.74);
  border-radius: 50%;
  margin: 0px;
- border: 1px solid rgba(192, 193, 214, 0.77);
+ border: 0px solid rgba(192, 193, 214, 0.77);
  -webkit-box-shadow: 3px 9px 15px -7px rgba(0,0,0,0.75);
  -moz-box-shadow: 3px 9px 15px -7px rgba(0,0,0,0.75);
  box-shadow: 3px 9px 15px -7px rgba(0,0,0,0.75);
 }
-.chatMessenger button span{
+.chatMessengerBtn button span{
   margin-top: 5px;
  }
 .transparent{
-  background: rgba(255, 255, 255, 0);
+  background: rgba(198, 108, 189, 0) !important;
   text-align: center;
   border: none;
+}
+nav {
+  /*background: rgb(55, 57, 66) !important;*/
+  background: rgb(38, 38, 38) !important;
+  border: none !important;
+
 }
 .navigate a{
   font-size: 15px;
   /*color: rgba(255, 255, 255, 0.72);*/
-  color: black;
+  color: rgba(245, 243, 239, 0.9);;
 }
 .navigate li:hover{
   background-color: black;
 }
 .detailContainer{
   padding: 25px;
-  background: white;
+  background: rgba(245, 243, 239, 0.8);
   -webkit-box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
   -moz-box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
   box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
   border-radius: 1px;
+  margin-top: 30px;
 }
 .alignBtn{
   display: inline-block;
@@ -52,12 +71,24 @@ body {
 .githubBtn{
   margin-right: 25px;
 }
+.borderless{
+  margin-top: 25px;
+}
 .borderless td, .borderless th {
     border: none !important;
     text-align: center;
 }
+table{
+  width: 500px !important;
+  margin: 0 auto;
+
+}
 .centerText{
   text-align: center;
+  top: -25px;
+}
+.centerText h1{
+  color: rgb(38, 38, 38);
 }
 .imgMed{
   padding-left: 0px;
@@ -75,14 +106,6 @@ body {
   width: 100%;
   height: 100%;
 }
-.chatContainer{
-  height: 400px;
-  width: 300px;
-  position: absolute;
-  bottom: 25px;
-  right: 250px;
-  background-color: red;
-}
 .messages{
   width: 100%;
   height: 250px;
@@ -98,7 +121,80 @@ body {
 .tableImg{
   width: 50px;
   height: 50px;
+  display: inline;
 }
 .alignBtn{
   align: center;
+}
+.chatContainer{
+  position: absolute;
+  width: 300px;
+  bottom: 100px;
+  right: 25px;
+  float: right;
+  height: 350px;
+  background-color: rgba(116, 118, 145, 0.8);
+  border-radius: 5px;
+  -webkit-box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
+  -moz-box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
+  box-shadow: 7px 9px 28px -7px rgba(0,0,0,0.75);
+  display: none;
+}
+.show{
+    display: block !important;
+}
+.close{
+  position: absolute;
+  top: 0px;
+  left: 10px;
+  color: white;
+  color: red;
+}
+#messages{
+  height: 315px;
+}
+.profIcon{
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+}
+.alignContactInfo{
+  text-align: center;
+  color: rgba(230, 48, 0, 0.74);
+
+}
+.alignContactInfo h5{
+  display: inline;
+  font-size: 15px;
+}
+
+.alignContactInfo h6{
+  display: inline;
+}
+hr{
+  width: 50%;
+  border: 10px solid rgba(230, 48, 0, 0.74);
+  background-color:#CCC;
+}
+.marginup{
+  margin-top: 5px;
+}
+.margincontact{
+  margin-top: 45px;
+}
+.selected{
+  border-bottom: 5px solid rgba(230, 48, 0, 0.74);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+li a:hover, li a:focus {
+   color: white !important;
+   background-color: rgb(38, 38, 38) !important;
+}
+.redLine{
+  border: 1px solid rgba(230, 48, 0, 0.74);
+  margin-bottom: 15px;
+}
+.projectLink{
+  color: rgba(230, 48, 0, 0.74);
 }
