--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body {
 .background{
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
-  background-image: url('./images/background.jpg');
+  background-image: url('./images/projectsBackground.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
 
