--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,43 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+@media (min-width: 1000px) {
+  .profileImg {
+    top: 25%;
+    height: 85vh;
+    max-height: 750px;
+    max-width: 750px;
+    width: 100% !important;
+    background-image: url('./images/lucasGarzaImg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+@media (max-width: 500px) {
+
+  .profileImg{
+      display: none;
+ }
+ .profileText{
+   top: 0;
+ }
+ nav {
+   /*background: rgb(55, 57, 66) !important;*/
+   background: rgb(38, 38, 38) !important;
+   border: none !important;
+
+ }
+ .navigate a{
+   font-size: 15px;
+   /*color: rgba(255, 255, 255, 0.72);*/
+   color: rgba(245, 243, 239, 0.9);;
+ }
+ .navigate li:hover{
+   background-color: black;
+ }
+
+
+}
+
 .backgroundLucas{
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
@@ -198,6 +235,7 @@ li a:hover, li a:focus {
 .redLine{
   border: 1px solid rgba(230, 48, 0, 0.74);
   margin-bottom: 15px;
+  width: 250px;
 }
 .projectLink{
   color: rgba(230, 48, 0, 0.74);
@@ -227,15 +265,6 @@ li a:hover, li a:focus {
   font-size: 40px;
   color: whitesmoke;
 }
-.profileImg{
-  top: 25%;
-  height: 85vh;
-  max-height: 750px;
-  width: 100% !important;
-  background-image: url('./images/lucasGarzaImg.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
 .profileText{
   top: 20vh;
 }
@@ -247,6 +276,22 @@ li a:hover, li a:focus {
   margin-bottom: 10px;
   margin-top: 10px;
 }
-.profContainer{
+.profileContainer{
   height: 80vh;
+}
+.aboutDescription{
+  color: rgba(245, 243, 239, 0.8);
+}
+.aboutDescription p{
+  margin: 0 auto;
+  line-height: 17.5px;
+  width: 300px;
+}
+
+.professionalIcons{
+  margin-top: 15px;
+  font-size: 20px;
+}
+.projectTitle{
+  color: black;
 }
