--- a/style/style.css
+++ b/style/style.css
@@ -11,40 +11,51 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
-@media (min-width: 1000px) {
+/*Monitor*/
+@media (min-width: 1280px) {
   .profileImg {
     top: 25%;
-    height: 85vh;
-    max-height: 750px;
-    max-width: 750px;
-    width: 100% !important;
+    height: 750px;
+    width: 750px;
     background-image: url('./images/lucasGarzaImg.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-  }
-@media (max-width: 500px) {
+}
+.profileText{
+  top: 20vh;
+}
 
-  .profileImg{
-      display: none;
- }
- .profileText{
-   top: 0;
- }
- nav {
-   /*background: rgb(55, 57, 66) !important;*/
-   background: rgb(38, 38, 38) !important;
-   border: none !important;
 
- }
- .navigate a{
-   font-size: 15px;
-   /*color: rgba(255, 255, 255, 0.72);*/
-   color: rgba(245, 243, 239, 0.9);;
- }
- .navigate li:hover{
-   background-color: black;
- }
+}
+/*phone*/
+@media (min-width: 1px) {
+  .profileImg {
+    top: 25%;
+    height: 300px;
+    width: 300px;
+    background-image: url('./images/lucasGarzaImg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 0 auto;
+}
 
+}
+
+/*Macbook*/
+@media (min-width: 767px) {
+  .profileImg {
+    top: 25%;
+    height: 500px;
+    width: 500px;
+    background-image: url('./images/lucasGarzaImg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 0 auto;
+
+}
+.profileText{
+  top: 20vh;
+}
 
 }
 
@@ -265,9 +276,6 @@ li a:hover, li a:focus {
   font-size: 40px;
   color: whitesmoke;
 }
-.profileText{
-  top: 20vh;
-}
 .pdfContainer{
   max-height: 85vh;
   overflow: scroll;
@@ -275,9 +283,6 @@ li a:hover, li a:focus {
 .project{
   margin-bottom: 10px;
   margin-top: 10px;
-}
-.profileContainer{
-  height: 80vh;
 }
 .aboutDescription{
   color: rgba(245, 243, 239, 0.8);
@@ -294,4 +299,8 @@ li a:hover, li a:focus {
 }
 .projectTitle{
   color: black;
+}
+.centerNavDropdown{
+  right: 45%;
+  border: none;
 }
