changed background of all slides to black and chaned nac background to black as well

--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@ body {
 }
 nav {
   /*background: rgb(55, 57, 66) !important;*/
-  background: rgb(38, 38, 38) !important;
+  background: black !important;
   border: none !important;
 
 }
