fixed footer sizing

--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,7 @@ body {
   }
   .footerContainer{
     background-color: black;
-    width: 90%;
+    max-width: 900px;
     height: 100px;
     margin: 0 auto;
 
@@ -97,7 +97,7 @@ body {
   .footerContainer{
     background-color: black;
     height: 100px;
-    width: 1200px;
+    width: 90%;
     margin: 0 auto;
 
   }
